# minicraft-rust

./: .gitignore  Cargo.toml  buildweb.sh  planning.md
.github/workflows/: PushGameToWebsite.yml
recent_web_build/: bevy_test_game.js
rustcraft/: rustcraft.html  rustcraft.js
src/: appload.rs  assetload.rs  camera.rs  debug.rs  engine.rs  font_render.rs  inventory.rs  item.rs  main.rs  map_generation.rs  player.rs  sound_event.rs  states.rs
