[package]
name = "rustcraft"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
bevy_ecs_tilemap = "0.7"
bevy_asset_loader = { version = "0.12.1", features = ["2d"] }
bevy-inspector-egui = "0.12.1"

[dependencies.bevy]
version = "0.8"
default-features = false
# These are the remaining default features other than `bevy_audio` and `vorbis`
features = [
    "render",
    "animation",
    "bevy_asset",
    # "bevy_scene",
    "bevy_winit",
    "bevy_gilrs",
    "png",
    "hdr",
    "filesystem_watcher",
    "x11",
    "dynamic",
]

[dependencies.bevy_kira_audio]
version = "0.12"
default-features = false
features = ["wav", "flac", "mp3", "ogg"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# make release builds faster
# [profile.release]
# lto = "thin"
